samples/_failures_safe/1761335703_e16daa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5133a54a.c: In function ‘main’:
./samples/SAFE/__tmp_5133a54a.c:151:13: error: expected expression at end of input
  151 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_5133a54a.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5133a54a.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5133a54a.c:151:13: error: expected declaration or statement at end of input
